--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: maddy.tech
+name: Hi there! My name's Maddy. 
 
 # Short bio or description (displayed in the header)
-description: Software Engineer from London, UK
+description: Software Engineer based in London, UK
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: C:\Users\madda\OneDrive\Desktop
+avatar: C:\Users\madda\OneDrive\Desktop\LinkedIn_picture.jpg
 
 #
 # Flags below are optional
