--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: maddygre/jekyll-now
   instagram:
-  linkedin: maddalena-o-bb2372020/
+  linkedin: maddalena-o-bb2372020
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
